option('with-mpi',   type : 'feature', value : 'auto', description: 'enable MPI support')
option('enable-tecio', type : 'boolean', value : true, description: 'enable TECIO support')
option('enable-cgns',  type : 'boolean', value : true, description: 'enable CGNS support')
option('enable-autodiff',  type : 'boolean', value : false, description: 'enable AD (reverse) support')
option('enable-directdiff',  type : 'boolean', value : false, description: 'enable AD (forward) support')
option('enable-pywrapper',  type : 'boolean', value : false, description: 'enable Python wrapper support')
option('enable-normal',  type : 'boolean', value : true, description: 'enable normal build')
option('python_path',  type : 'string', value : '', description: 'Python path')
